--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -31,16 +31,21 @@ p{
 }
 .chart{
     border: 1px solid black;
-    height: 300px;
+    height: 300px !important;
     margin: 0 auto;
-    width: 500px;
+    width: 500px !important;
+}
+canvas {
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
 }
 
 /*Media Queries*/
 
 @media screen and (max-width: 516px){
     .chart{
-        width: 100%;
+        width: 100% !important;
     }
 }
 
