--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1,5 +1,41 @@
+.site {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+header{
+    height: 145px;
+    margin-bottom: 40px;
+}
+header .top,
+header .main-nav{
+    display: block;
+}
+header .top{
+    background-color: #a7ce47;
+    font-size: 15px;
+    height: 40px;
+}
+header .top ul li{
+    display: inline-block;
+}
+header .top ul li a{
+    border-left: solid 1px rgba(255,255,255,.15);
+    color: #666;
+    display: block;
+    position: relative;
+    padding: 9px 15px;
+}
+header .main-nav{
+    background-color: #666666;
+    height: 105px;
+}
+.navbar{
+    padding: 0 !important;
+}
 .main-container{
     display: grid;
+    flex: 1;
     grid-template-areas: "column1 . column2"
                          "column3 . column4"
                          "column5 column5 column5";
@@ -30,7 +66,7 @@ p{
     text-align: center;
 }
 .chart{
-    border: 1px solid black;
+    border: 1px solid #e8e8e8;
     height: 300px !important;
     margin: 0 auto;
     width: 500px !important;
@@ -40,12 +76,31 @@ canvas {
     -webkit-user-select: none;
     -ms-user-select: none;
 }
+footer{
+    background-color: #22222a;
+    min-height: 100px;
+}
 
 /*Media Queries*/
 
 @media screen and (max-width: 516px){
     .chart{
         width: 100% !important;
+    }
+    header,
+    header .top{
+        height: 100%;
+    }
+    header .top ul li{
+        display: block;
+        text-align: center;
+        padding: 0;
+        margin: 0;
+        position: unset;
+    }
+    header .top ul li a{
+        border-left: none;
+        border-bottom: solid 1px rgba(255,255,255,.15);
     }
 }
 
@@ -56,6 +111,17 @@ canvas {
                              "column3"
                              "column4"
                              "column5";
+    }
+    header,
+    header .top{
+        height: 100%;
+    }
+    header .top ul li{
+        display: block;
+        text-align: center;
+    }
+    header .top ul li a{
+        border-left: 1px solid transparent;
     }
 }
 
