--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -36,12 +36,14 @@ header .main-nav{
 .main-container{
     display: grid;
     flex: 1;
-    grid-template-areas: "column1 . column2"
+    /*grid-template-areas: "column1 . column2"
                          "column3 . column4"
-                         "column5 column5 column5";
-    grid-row-gap: 15px;
+                         "column5 column5 column5";*/
+    grid-template-columns: 1fr 50px 1fr;
+    grid-template-rows: repeat(3, auto);
+    grid-row-gap: 25px;
 }
-.column1{
+/*.column1{
     grid-area: column1;
     justify-self: center;
 }
@@ -59,6 +61,10 @@ header .main-nav{
 }
 .column5{
     grid-area: column5;
+    justify-self: center;
+}*/
+.column7{
+    grid-column: 1 / 4;
     justify-self: center;
 }
 p{
@@ -84,6 +90,15 @@ footer{
 /*Media Queries*/
 
 @media screen and (max-width: 516px){
+    .column1,
+    .column3,
+    .column4,
+    .column6{
+        grid-column: 1 / 4;
+    }
+    .column7{
+        justify-self: initial;
+    }
     .chart{
         width: 100% !important;
     }
@@ -105,12 +120,11 @@ footer{
 }
 
 @media screen and (max-width: 768px){
-    .main-container{
-        grid-template-areas: "column1"
-                             "column2"
-                             "column3"
-                             "column4"
-                             "column5";
+    .column1,
+    .column3,
+    .column4,
+    .column6{
+        grid-column: 1 / 4;
     }
     header,
     header .top{
@@ -125,12 +139,11 @@ footer{
     }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1020px){
-    .main-container{
-        grid-template-areas: "column1"
-                             "column2"
-                             "column3"
-                             "column4"
-                             "column5";
+@media screen and (min-width: 768px) and (max-width: 1066px){
+    .column1,
+    .column3,
+    .column4,
+    .column6{
+        grid-column: 1 / 4;
     }
 }
