--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -87,6 +87,11 @@ footer{
     min-height: 100px;
 }
 
+.popoverStyle{
+    min-width: 200px;
+    min-height: 100px;
+}
+
 /*Media Queries*/
 
 @media screen and (max-width: 516px){
