--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -36,33 +36,10 @@ header .main-nav{
 .main-container{
     display: grid;
     flex: 1;
-    /*grid-template-areas: "column1 . column2"
-                         "column3 . column4"
-                         "column5 column5 column5";*/
     grid-template-columns: 1fr 50px 1fr;
     grid-template-rows: repeat(3, auto);
     grid-row-gap: 25px;
 }
-/*.column1{
-    grid-area: column1;
-    justify-self: center;
-}
-.column2{
-    grid-area: column2;
-    justify-self: center;
-}
-.column3{
-    grid-area: column3;
-    justify-self: center;
-}
-.column4{
-    grid-area: column4;
-    justify-self: center;
-}
-.column5{
-    grid-area: column5;
-    justify-self: center;
-}*/
 .column7{
     grid-column: 1 / 4;
     justify-self: center;
@@ -77,11 +54,6 @@ p{
     margin: 0 auto;
     width: 500px !important;
 }
-canvas {
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
-}
 footer{
     background-color: #22222a;
     min-height: 100px;
@@ -91,9 +63,13 @@ footer{
     min-width: 200px;
     min-height: 100px;
 }
+.filter-container{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-items: center;
+}
 
 /*Media Queries*/
-
 @media screen and (max-width: 516px){
     .column1,
     .column3,
@@ -123,7 +99,6 @@ footer{
         border-bottom: solid 1px rgba(255,255,255,.15);
     }
 }
-
 @media screen and (max-width: 768px){
     .column1,
     .column3,
@@ -143,7 +118,6 @@ footer{
         border-left: 1px solid transparent;
     }
 }
-
 @media screen and (min-width: 768px) and (max-width: 1066px){
     .column1,
     .column3,
