--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -151,6 +151,12 @@ canvas{
         grid-template-columns: 1fr;
         gap: 15px;
     }
+    .filter-item:nth-of-type(1){
+        justify-self: center;
+    }
+    .filter-item:nth-of-type(3){
+        justify-self: center;
+    }
 }
 @media screen and (min-width: 768px) and (max-width: 1066px){
     .column1,
