included matrix components and server logic

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -94,6 +94,9 @@ footer{
 canvas{
     grid-area: canvas;
 }
+.matrix-style th{
+    text-align: center;
+}
 
 /*Media Queries*/
 @media screen and (max-width: 516px){
